--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,7 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add output/
+          git add output2/
           timestamp=$(date -u)
           git commit -m "Last update: $(timestamp)" || exit 0
           git push
