--- a/.github/workflows/package-titledb.yml
+++ b/.github/workflows/package-titledb.yml
@@ -15,22 +15,51 @@ jobs:
       - name: Merge directories and create ZIP
         run: |
           mkdir -p temp_merge
-          rsync -a --ignore-existing output/titleid/ temp_merge/ 2>/dev/null || true
-          rsync -a --ignore-existing output2/titleid/ temp_merge/ 2>/dev/null || true
+          
+          # 检查目录是否存在
+          if [ -d "output/titleid/" ]; then
+            echo "找到 output/titleid/ 目录"
+            rsync -a --ignore-existing output/titleid/ temp_merge/ 2>/dev/null || true
+          else
+            echo "警告: output/titleid/ 目录不存在"
+          fi
+          
+          if [ -d "output2/titleid/" ]; then
+            echo "找到 output2/titleid/ 目录"
+            rsync -a --ignore-existing output2/titleid/ temp_merge/ 2>/dev/null || true
+          else
+            echo "警告: output2/titleid/ 目录不存在"
+          fi
           
           echo "文件合并完成。准备打包..."
           zip -r titleid.zip temp_merge/
-          echo "ZIP包创建完成。"
+          echo "ZIP包创建完成。文件大小:"
+          ls -lh titleid.zip
 
-      - name: Upload to Release
+      - name: Upload to Release (使用标签)
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ""
-          name: "TitleDB Merged Package"
+          # 使用固定标签而不是无标签Release
+          tag_name: "latest-package"
+          name: "TitleDB Merged Package (最新版)"
           body: |
-            自动更新于 ${{ github.event.schedule || '手动触发' }}
-            此包合并了 `/output/titleid/` 和 `/output2/titleid/` 目录下的内容。
-          replace_assets: true
+            🗓️ 自动更新于 ${{ github.event.schedule || '手动触发' }}
+            
+            此包合并了以下目录的内容：
+            - `/output/titleid/`
+            - `/output2/titleid/`
+            
+            **文件信息：**
+            - 生成时间: ${{ github.event.head_commit.timestamp || github.run_started_at }}
+            - 工作流运行: [#${{ github.run_number }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            
+            📦 每次更新都会替换之前的文件。
+          # 使用 append_body 来保留之前的更新记录
+          append_body: false
+          # 每次覆盖同标签的Release
+          draft: false
+          prerelease: false
+          generate_release_notes: false
           files: titleid.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
