--- a/.github/workflows/package-titledb.yml
+++ b/.github/workflows/package-titledb.yml
@@ -2,7 +2,8 @@ name: Package and Release TitleDB
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    # 每小时运行一次（每小时的第0分钟）
+    - cron: '0 * * * *'
   workflow_dispatch:
 
 jobs:
@@ -41,19 +42,21 @@ jobs:
         with:
           # 使用固定标签而不是无标签Release
           tag_name: "latest-package"
-          name: "TitleDB Merged Package (最新版)"
+          name: "Switch游戏信息库"
           body: |
-            🗓️ 自动更新于 ${{ github.event.schedule || '手动触发' }}
+            🎮 **Switch游戏信息库**
             
-            此包合并了以下目录的内容：
-            - `/output/titleid/`
-            - `/output2/titleid/`
+            此项目内容为Switch游戏信息数据，每小时定期更新，支持显示游戏截图，游戏厂商以及游戏大小等内容。
             
-            **文件信息：**
-            - 生成时间: ${{ github.event.head_commit.timestamp || github.run_started_at }}
-            - 工作流运行: [#${{ github.run_number }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            **更新时间:** ${{ github.event.schedule || '手动触发' }}
+            **生成时间:** ${{ github.event.head_commit.timestamp || github.run_started_at }}
+            **工作流运行:** [#${{ github.run_number }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
             
-            📦 每次更新都会替换之前的文件。
+            **包含内容:**
+            - `/output/titleid/` - 游戏信息数据
+            - `/output2/titleid/` - 附加游戏信息
+            
+            📊 本仓库每小时自动更新一次，确保数据最新。
           # 使用 append_body 来保留之前的更新记录
           append_body: false
           # 每次覆盖同标签的Release
