--- a/.github/workflows/package-titledb.yml
+++ b/.github/workflows/package-titledb.yml
@@ -45,8 +45,7 @@ jobs:
           name: "Switch游戏信息库"
           body: |
             Switch游戏信息库
-
-            此项目内容为Switch游戏信息数据，每小时定期更新，支持显示游戏截图，游戏厂商以及游戏大小等内容。
+            每小时定期更新，支持显示游戏截图等内容。
           # 使用 append_body 来保留之前的更新记录
           append_body: false
           # 每次覆盖同标签的Release
