--- a/.github/workflows/package-titledb.yml
+++ b/.github/workflows/package-titledb.yml
@@ -14,65 +14,108 @@ jobs:
 
       - name: Merge directories and create ZIP
         run: |
-          # ... 合并目录和创建zip的代码保持不变 ...
-          zip -r titleid.zip temp_merge/
+          mkdir -p temp_merge
+          
+          # 检查目录是否存在
+          if [ -d "output/titleid/" ]; then
+            echo "找到 output/titleid/ 目录"
+            # 复制所有文件，忽略已有文件（避免重复）
+            cp -n -r output/titleid/* temp_merge/ 2>/dev/null || true
+          else
+            echo "警告: output/titleid/ 目录不存在"
+          fi
+          
+          if [ -d "output2/titleid/" ]; then
+            echo "找到 output2/titleid/ 目录"
+            cp -n -r output2/titleid/* temp_merge/ 2>/dev/null || true
+          else
+            echo "警告: output2/titleid/ 目录不存在"
+          fi
+          
+          # 检查temp_merge目录是否为空
+          if [ -z "$(ls -A temp_merge/ 2>/dev/null)" ]; then
+            echo "错误: temp_merge 目录为空！"
+            echo "创建空的titleid.zip"
+            touch temp_merge/README.txt
+            echo "这是空的游戏数据库包" > temp_merge/README.txt
+          fi
+          
+          echo "文件合并完成。准备打包..."
+          echo "temp_merge目录内容:"
+          ls -la temp_merge/ || echo "目录可能为空"
+          
+          # 进入目录创建zip，避免路径问题
+          cd temp_merge
+          zip -r ../titleid.zip .
+          cd ..
+          
+          echo "ZIP包创建完成。文件大小:"
+          ls -lh titleid.zip
           
           # 添加时间戳到文件名
           TIMESTAMP=$(date +%Y%m%d-%H%M%S)
           mv titleid.zip titleid-${TIMESTAMP}.zip
+          
+          # 创建latest.txt文件用于重定向
+          echo "titleid-${TIMESTAMP}.zip" > latest.txt
+          echo "最新文件: titleid-${TIMESTAMP}.zip"
 
       - name: Create or Update Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: "latest-package"
-          name: "Switch游戏信息库"
+          name: "Switch游戏信息库 - $(date +'%Y-%m-%d %H:%M')"
           body: |
-            烤鸭包风灵月影专用游戏数据库
+            ## 🦆 烤鸭包风灵月影专用游戏数据库
+            
             每小时自动更新，包含游戏截图等内容。
             
-            📅 最新版本: $(date +'%Y-%m-%d %H:%M:%S')
+            ### 📊 版本信息
+            - **生成时间:** $(date +'%Y-%m-%d %H:%M:%S')
+            - **版本标识:** ${TIMESTAMP}
+            - **文件大小:** $(du -h titleid-${TIMESTAMP}.zip | cut -f1)
             
-            **历史版本下载统计:**
-            - 总下载量: [查看统计页面](https://github.com/sskyNS/titledb_filtered/releases/tag/latest-package)
+            ### 📥 下载链接
+            **当前版本文件:** [titleid-${TIMESTAMP}.zip](https://github.com/sskyNS/titledb_filtered/releases/download/latest-package/titleid-${TIMESTAMP}.zip)
+            
+            **固定链接（始终指向最新版）:**
+            ```
+            https://sskyNS.github.io/titledb_filtered/latest
+            ```
+            
+            ### 📋 包含内容
+            此包合并了以下目录的内容：
+            - `/output/titleid/`
+            - `/output2/titleid/`
             
             ---
             
-            ### 最新版本下载：
-            [titleid-latest.zip](https://github.com/sskyNS/titledb_filtered/releases/download/latest-package/titleid-*.zip)
-            
-            *注意：链接中的 * 会自动重定向到最新版本*
+            *注意：每个版本的文件下载量会被独立统计，不会被重置*
           draft: false
           prerelease: false
           generate_release_notes: false
           files: |
             titleid-*.zip
+          # 添加到现有release而不是创建新的
+          append_body: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create redirect file
-        run: |
-          # 获取最新的zip文件名
-          LATEST_ZIP=$(ls -t titleid-*.zip | head -1)
-          
-          # 创建HTML重定向文件
-          cat > latest.html << EOF
-          <!DOCTYPE html>
-          <html>
-          <head>
-              <meta http-equiv="refresh" content="0; url=https://github.com/sskyNS/titledb_filtered/releases/download/latest-package/${LATEST_ZIP}">
-          </head>
-          <body>
-              <p>正在重定向到最新版本... <a href="https://github.com/sskyNS/titledb_filtered/releases/download/latest-package/${LATEST_ZIP}">点击这里</a></p>
-          </body>
-          </html>
-          EOF
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
 
-      - name: Upload redirect file to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
-          publish_branch: gh-pages
-          keep_files: true
-          file_name: latest.html
+          source: ./
+          destination: ./_site
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./_site
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
