--- a/.github/workflows/package-titledb.yml
+++ b/.github/workflows/package-titledb.yml
@@ -68,7 +68,7 @@ jobs:
           
           # 5. 准备新的 Body 内容 (已修复引号并精简内容)
           BASE_TEXT="自动更新于 $(date -u '+%Y-%m-%d %H:%M:%S') UTC
-          风灵月影专用，每小时定期更新，包含游戏截图、大小、厂商等内容，注意，当您使用风灵月影的快速匹配金手指功能时，此功能不会出现。"
+          风灵月影专用，每小时定期更新，包含游戏截图、大小、厂商等内容，注意，当您使用风灵月影的快速匹配金手指功能时，此功能不会出现，反之亦然。"
           
           # 拼接新的隐藏标签 (用于下一次累计)
           FINAL_BODY="$BASE_TEXT
